Fix edit form on tablet

--- a/public/stylesheets/edit_recipe.css
+++ b/public/stylesheets/edit_recipe.css
@@ -240,6 +240,18 @@ body {
 }
 
 
+/* Portrait */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+    .container {
+        width: 80% !important;
+    }
+}
+
+/* Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {}
+
+
+
 @media (min-width: 768px) and (max-width: 949px) {
 
     .logos img {
